<resources>
    <string name="app_name">StoragePlus</string>
    <string name="title_activity_main_side_menu">MainSideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="storage">Estoques</string>
    <string name="locations">Localizações</string>
    <string name="users">Usuários</string>
    <string name="categories">Categorias</string>
    <string name="category">Categoria</string>
    <string name="quantityInStock">Quantidade em Estoque</string>
    <string name="minQuantityInStock">Quantidade mínima em Estoque</string>
    <string name="preferences">Preferência</string>
    <string name="user">Perfil</string>
    <string name="company">Empresa</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="description">Descrição</string>
    <string name="adress">Endereço</string>
    <string name="admin">Administrador</string>
    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="confirme_password">Confirmar senha</string>
    <string name="name">Nome</string>
    <string name="localizacao">Localização</string>
    <string name="responsavel">Responsável</string>
</resources>