<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_storages"
            android:icon="@drawable/ic_storage_24"
            android:title="@string/storage" />
        <item android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location_24"
            android:title="@string/locations" />
        <item android:id="@+id/nav_users"
            android:icon="@drawable/ic_users_24"
            android:title="@string/users" />
    </group>


    <item android:title="@string/preferences">
        <menu>
            <item android:id="@+id/nav_user"
                android:icon="@drawable/ic_user_24"
                android:title="@string/user" />
            <item android:id="@+id/nav_company"
                android:icon="@drawable/ic_company_24"
                android:title="@string/users" />
        </menu>
    </item>

</menu>