<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.FormNewStudentActivity">

        <TextView
            android:id="@+id/activity_form_user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:textSize="32dp"
            />

        <EditText android:id="@+id/activity_form_user_name"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"
            />

        <EditText android:id="@+id/activity_form_user_email"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />

        <EditText android:id="@+id/activity_form_user_password"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />

        <EditText android:id="@+id/activity_form_user_password_confirm"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/confirme_password"
            />

        <Button android:id="@+id/activity_form_location_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:orientation="vertical" />



    </LinearLayout>
</ScrollView>