<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.ui.FormNewCategoryActivity">

        <TextView android:id="@+id/activity_form_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="34sp"
            android:layout_margin="8dp"
            tools:text="name" />

        <EditText android:id="@+id/activity_form_category_name"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:autofillHints="" />

        <EditText android:id="@+id/activity_form_category_description"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:autofillHints=""
            />

        <Button android:id="@+id/activity_form_category_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:orientation="vertical" />

        <Button android:id="@+id/activity_form_category_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/delete"
            android:orientation="vertical" />


    </LinearLayout>
</ScrollView>