<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.FormNewStudentActivity">

        <TextView android:id="@+id/activity_form_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="34sp"
            android:layout_margin="8dp"
            tools:text="name" />

        <EditText
            android:id="@+id/activity_form_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <EditText android:id="@+id/activity_form_product_description"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/quantityInStock" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_form_product_decrease_button_product_quantity"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/activity_form_product_quantity_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="0"
                android:inputType="number"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_form_product_increase_button_product_quantity"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/minQuantityInStock" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_form_product_decrease_button_product_min_quantity_stock"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/activity_form_product_min_quantity_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="0"
                android:inputType="number"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_form_product_increase_button_product_min_quantity_stock"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:layout_marginStart="11dp"
            />

        <Spinner
            android:id="@+id/activity_form_product_spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="8dp" />

        <Button android:id="@+id/activity_form_product_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:orientation="vertical" />

        <Button android:id="@+id/activity_form_product_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/delete"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>